# src/node/koa2_backend/routes/mongo_controller.js
@@ -1,15 +1,23 @@
 const router = require('koa-router')()
 
-import * as web3_service from "../services/web3_service"
+import * as mongo_service from "../services/mongo_service"
 
-router.get('/', async (ctx, next) => {
-  ctx.response.type = 'json';
-  ctx.response.body = { 'msg': 'demo MSG' };
+router.get('/ubi_info/latest',async (ctx, next) => {
+    ctx.response.type = 'json';
+    await mongo_service.latestUBIInfo(ctx)
+    await next()
 })
 
-//e.g. http://localhost:3000/token/balanceof/0xda83aee0f49802a331d455f503341a5fdcbde923
-router.get('/token/balanceof/:address', async (ctx, next) => {
-  await web3_service.balanceOf(ctx.params.address, ctx)
+router.get('/ubi_info/index/:ubi_code', async (ctx, next) => {
+    ctx.response.type = 'json';
+    await mongo_service.getUBIInfoByCode(ctx)
+    await next()
+})
+
+router.get('/ubi_info/list', async (ctx, next) => {
+    ctx.response.type = 'json';
+    await mongo_service.getUBIInfoList(ctx)
+    await next()
 })
 
 module.exports = router
