# src/node/koa2_backend/routes/web3_controller.js
@@ -2,14 +2,15 @@ const router = require('koa-router')()
 
 import * as web3_service from "../services/web3_service"
 
-router.get('/', async (ctx, next) => {
+router.get('/token/info', async (ctx, next) => {
   ctx.response.type = 'json';
-  ctx.response.body = { 'msg': 'demo MSG' };
+  web3_service.info(ctx)
 })
 
-//e.g. http://localhost:3000/token/balanceof/0xda83aee0f49802a331d455f503341a5fdcbde923
-router.get('/token/balanceof/:address', async (ctx, next) => {
-  await web3_service.balanceOf(ctx.params.address, ctx)
+//e.g. http://localhost:3000/token/balance_of/0xda83aee0f49802a331d455f503341a5fdcbde923
+router.get('/token/balance_of/:address', async (ctx, next) => {
+  ctx.response.type = 'json';
+  web3_service.balanceOf(ctx)
 })
 
 module.exports = router
